Bug 8375 - acpi video: don't export backlight interface if read _BLC fail
Summary: acpi video: don't export backlight interface if read _BLC fail
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Video (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Luming Yu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-04-27 03:02 UTC by Danny Kukawka
Modified: 2007-07-25 22:41 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.21
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
patch to prevent sysfs backlight interface if query _BLC fail (3.00 KB, patch)
2007-04-27 03:09 UTC, Danny Kukawka
Details | Diff

Description Danny Kukawka 2007-04-27 03:02:42 UTC
Currently the video module export backlight interface to sysfs also if there is 
no _BCL ACPI method in the bios or if acpi_video_device_lcd_query_levels() fail 
for some reason. 

Because of the failure the user can't set the brightness (echo return with: 
"write error: Invalid Argument") also because the user don't know the allowed/
available brightness level. One example is e.g. a ASUS R1F Laptop which is 
correct supported by the asus-laptop module.

The kernel should not export the backlight interface if _BLC is missing because 
the interface is needless in this case. See attached patch.
Comment 1 Danny Kukawka 2007-04-27 03:09:57 UTC
Created attachment 11283 [details]
patch to prevent sysfs backlight interface if query _BLC fail
Comment 2 Luming Yu 2007-05-05 09:25:40 UTC
acked
Comment 3 Len Brown 2007-07-02 22:36:44 UTC
patch in comment #1 added to acpi-test
Comment 4 Len Brown 2007-07-25 22:41:58 UTC
patch in comment #1 shipped in 2.6.23-rc1
closed.

Note You need to log in before you can comment on or make changes to this bug.